corrected logo spacing in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -478,7 +478,7 @@ header{
 
   footer .logos{
     text-align: center;
-    margin-bottom: 98px;
+    margin-bottom: 50px;
     
   }
 
